2008-06-29	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* images/screenshots
	* images/Makefile.am
	* getinvolved.html
	* download.html
	* index.html
	* screenshots.html:
	Added screenshots section

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* getinvolved.html
	* index.html
	* default.css:
	Fixed HTML error and added Contribute section to getinvolved.html 

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* index.html:
	Adjusted link to GPLv2

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	Create initial site