@@ -87,6 +87,15 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+		<h3>June 30, 2008</h3>
+		  <b>Stable</b> version 2.22.3 released. This is the last release in the 2.22 series.
+		  Changes since 2.22.2.1:
+		  <ul>
+		  	<li>Set TomboyNotesModule.tomboy to None when module is stopped</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=538425">bug #538425</a>: local variable 'stream' referenced before assignment</li>
+		  </ul>
+		  <a href="download.html">Download it</a>
+
 	    <h3>June 16, 2008</h3>
    	      <b>Unstable</b> version 2.23.4 released. Changes since 2.23.3:
    	      <ul>
