@@ -1,3 +1,9 @@
+2008-06-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.22.3 release
+
 2008-06-29	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* images/screenshots
